<resources>
    <string name="app_name">BEERMAN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BEERMAN</string>
    <string name="nav_header_subtitle">beerman@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_recipes">Recipes</string>
    <string name="menu_process">Process</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_calculators">Calculators</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="ale">Ale</string>
    <string name="stout">Stout</string>
    <string name="lager">Lager</string>
    <string name="malt">Malt</string>
    <string name="pilsner">Pilsner</string>
    <string name="todo">TODO</string>
    <string name="add">ADD</string>
    <string name="read">READ</string>
    <string name="text">Text</string>
    <string name="title">Title</string>
    <string name="welcome">Welcome to Beerman. This is an app created just for you to help you with your brewing needs. Navigate to side meu to continue.</string>
    <string name="og_1_050">OG: 1.050</string>
    <string name="fg_1_010">FG: 1.010</string>
    <string name="alcohol_by_volume_abv_calculator">Alcohol By Volume ABV Calculator</string>
    <string name="abv_info">Finds ABV based on gravity change. If you took an original gravity reading (or had estimated OG), and also took a final gravity (FG) reading prior to adding priming sugar at bottling you can find out your batch\'s alcohol by volume ABV. This calculator compliments the Brewer\'s Friend brew day sheets, which will help you keep records of your brewing process.</string>
    <string name="update">Update</string>
    <string name="_5_78">5.78%</string>

</resources>
