<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/recipes"
            android:title="@string/menu_recipes" />
        <item
            android:id="@+id/nav_process"
            android:icon="@drawable/process"
            android:title="@string/menu_process" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/notes"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/calculator"
            android:title="@string/menu_calculators" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
