<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDFDF1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Notes"

    tools:showIn="@layout/activity_notes">


    <EditText
        android:id="@+id/etData"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:autofillHints=""
        android:hint="@string/title"
        android:inputType=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:hint="@string/text"
        app:layout_constraintTop_toBottomOf="@+id/etData"
        android:autofillHints=""
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/add"
            android:textColor="#FFFFFF"
            tools:layout_editor_absoluteX="152dp"
            tools:layout_editor_absoluteY="323dp" />

        <Button
            android:id="@+id/btnRead"
            android:layout_width="221dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/read"
            android:textColor="#FFFFFF"
            tools:layout_editor_absoluteX="152dp"
            tools:layout_editor_absoluteY="323dp" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>